--- a/trabalho.html
+++ b/trabalho.html
@@ -13,7 +13,7 @@
 					mas se você ainda não teve a oportunidade, irei lhe apresentar.
 				</p>
 
-					<img src="1Dshow.jpg" alt="Imagem dos cinco meninos fazendo um show" height="450" width="550">
+					<img src="imagens/1Dshow.jpg" alt="Imagem dos cinco meninos fazendo um show" height="450" width="550">
 
 		<h1 style="color: rgb(240, 21, 64);"> Biografia da banda </h1>
 		<h2 style="color: honeydew;"> Informações gerais </h2>
