--- a/trabalho.html
+++ b/trabalho.html
@@ -51,7 +51,7 @@
 					Por exemplo, no cabeçalho de uma prova da escola você preenchia seu nome, número, nome do professor, nome da disciplina etc.
 				</p>
 
-					<img src="imagens/sitepediu.webp" alt="Imagem ilustrativa da tag head" height="450" width="590">
+					<img src="Imagens/sitepediu.webp" alt="Imagem ilustrativa da tag head" height="450" width="590">
 
 				<br> <br> 
 		<h2 style="color: honeydew;"> Aula sobre HTML </h2>
