--- a/trabalho.html
+++ b/trabalho.html
@@ -13,7 +13,7 @@
 					mas se você ainda não teve a oportunidade, irei lhe apresentar.
 				</p>
 
-					<img src="imagens/1Dshow.jpg" alt="Imagem dos cinco meninos fazendo um show" height="450" width="710">
+					<img src="Imagens/1Dshow.jpg" alt="Imagem dos cinco meninos fazendo um show" height="450" width="710">
 
 		<h1 style="color: rgb(240, 21, 64);"> Biografia da banda </h1>
 		<h2 style="color: honeydew;"> Informações gerais </h2>
@@ -33,7 +33,7 @@
 					e acabaram ficando com a terceira colocação entre todos os finalistas. 
 				</p>
 
-					<img src="imagens/selfieshow.jpg" alt="Selfie dos cinco meninos fazendo um show" height="450" width="710">
+					<img src="Imagens/selfieshow.jpg" alt="Selfie dos cinco meninos fazendo um show" height="450" width="590">
 
 		<h3 style="color: honeydew;"> Link para a apresentação dos meninos no X-Factor </h3> 
 			<a href="https://www.youtube.com/watch?v=Tw4r_gNWesE" target="_blank"> Relembrando o início de tudo! </a> <br> 
