--- a/trabalho.html
+++ b/trabalho.html
@@ -34,7 +34,7 @@
 					
 				</p>
 
-					<img src="Imagens/selfieshow.jpg" alt="Selfie dos cinco meninos fazendo um show" height="450" width="590">
+					<img src="selfieshow.jpg" alt="Selfie dos cinco meninos fazendo um show" height="450" width="590">
 
 		<h3 style="color: honeydew;"> Link para a apresentação dos meninos no X-Factor </h3> 
 			<a href="https://www.youtube.com/watch?v=Tw4r_gNWesE" target="_blank"> Relembrando o início de tudo! </a> <br> 
@@ -52,7 +52,7 @@
 					Por exemplo, no cabeçalho de uma prova da escola você preenchia seu nome, número, nome do professor, nome da disciplina etc.
 				</p>
 
-					<img src="Imagens/sitepediu.webp" alt="Imagem ilustrativa da tag head" height="450" width="590">
+					<img src="sitepediu.webp" alt="Imagem ilustrativa da tag head" height="450" width="590">
 
 				<br> <br> 
 		<h2 style="color: honeydew;"> Aula sobre HTML </h2>
@@ -77,7 +77,7 @@
 				Ou seja, a tag body, diz ao navegador que ali começou a parte visível ou o conteúdo da página.
 				 </p>
 
-					<img src="imagens/tagbody.gif" alt="Imagem ilustrativa da tag body" height="450" width="590">
+					<img src="tagbody.gif" alt="Imagem ilustrativa da tag body" height="450" width="590">
 				<br> <br>
 
 		<h3 style="color: honeydew;"> Informações sobre a tag < body > </h3>
