--- a/trabalho.html
+++ b/trabalho.html
@@ -8,7 +8,7 @@
 
 	<body> 
 
-	<body background="imagens/galaxia.jpg" bgproperties="fixed"></body>
+	<body background="galaxia.jpg" bgproperties="fixed"></body>
 
 		<h1 style="color: rgb(240, 21, 64);"> One Direction </h1>
 				<p> 					
@@ -22,7 +22,7 @@
 
 				</p>
 					<center> 
-					<img src="imagens/1Dshow.jpg" alt="Imagem dos cinco meninos fazendo um show" height="450" width="710">
+					<img src="1Dshow.jpg" alt="Imagem dos cinco meninos fazendo um show" height="450" width="710">
 				    </center>
 
 		<h1 style="color: rgb(240, 21, 64);"> Biografia da banda </h1>
@@ -43,7 +43,7 @@
 					e acabaram ficando com a terceira colocação entre todos os finalistas. 
 				</p>
 					<center> 
-					<img src="imagens/selfieshow.jpg" alt="Selfie dos cinco meninos fazendo um show" height="450" width="710">
+					<img src="selfieshow.jpg" alt="Selfie dos cinco meninos fazendo um show" height="450" width="710">
 					</center> 
 
 		<h3 style="color: honeydew;"> Link para a apresentação dos meninos no X-Factor </h3> 
@@ -62,7 +62,7 @@
 					Por exemplo, no cabeçalho de uma prova da escola você preenchia seu nome, número, nome do professor, nome da disciplina etc.
 				</p>
 
-					<img src="imagens/sitepediu.webp" alt="Imagem ilustrativa da tag head" height="450" width="590">
+					<img src="sitepediu.webp" alt="Imagem ilustrativa da tag head" height="450" width="590">
 
 				<br> <br> 
 		<h2 style="color: honeydew;"> Aula sobre HTML </h2>
@@ -87,7 +87,7 @@
 				Ou seja, a tag body, diz ao navegador que ali começou a parte visível ou o conteúdo da página.
 				 </p>
 
-					<img src="imagens/tagbody.gif" alt="Imagem ilustrativa da tag body" height="450" width="590">
+					<img src="tagbody.gif" alt="Imagem ilustrativa da tag body" height="450" width="590">
 				<br> <br>
 
 		<h3 style="color: honeydew;"> Informações sobre a tag < body > </h3>
